<resources>
    <string name="app_name">Taller_2_Jaime_Lopez</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="guardar">Guardar</string>
    <string name="configuracion">Configuración</string>
    <string name="volver_a_inicio">Volver a Inicio</string>
    <string name="azul">Azul</string>
    <string name="verde">Verde</string>
    <string name="rojo">Rojo</string>
    <string name="title_principal">Verificación de usuario</string>
    <string name="title_main">Menu</string>
    <string name="title_configuracion">configuracion</string>
    <string name="color">Color</string>
    <string name="imagen">Imagen</string>
    <string name="rojoM">ROJO</string>
    <string name="verde1">VERDE</string>
    <string name="azulM">AZUL</string>
    <string name="imagen_1">Imagen 1</string>
    <string name="imagen_2">Imagen 2</string>
    <string name="volver_a_inicio1">Volver a Inicio</string>
    <string name="selecciona_el_tipo_de_fondo">Selecciona el tipo de fondo</string>
    <string name="colorf">Color</string>
    <string name="imagen1">Imagen</string>
    <string name="selecciona_un_color_de_fondo">Selecciona un color de fondo</string>
    <string name="selecciona_una_imagen_de_fondo">Selecciona una imagen de fondo</string>
    <string name="imagen_1_2">Imagen 2</string>
    <string name="imagen_1_1">Imagen 1</string>
    <string name="volver_a_inicio_">Volver a Inicio</string>
    <string name="selecciona_el_tipo_de_fondo0">Selecciona el tipo de fondo</string>
    <string name="color0">Color</string>
    <string name="imagen0">Imagen</string>
    <string name="selecciona_un_color_de_fondo0">Selecciona un color de fondo</string>
    <string name="selecciona_una_imagen_de_fondo0">Selecciona una imagen de fondo</string>
    <string name="imagen_10">Imagen 1</string>
    <string name="imagen_20">Imagen 2</string>
    <string name="volver_a_inicio0">Volver a Inicio</string>
    <string name="hola_">¡Hola!</string>
    <string name="bienvenido_">¡Bienvenido!</string>
    <string name="ir_a_actividad_principal_">Gestionar operacion de red - Ingresar Nombre</string>
    <string name="no_se_ha_guardado_ning_n_nombre">No se ha guardado ningún nombre.</string>
    <string name="configuracion_fondo_de_pantalla">Configuracion - Fondo De Pantalla</string>
</resources>